@@ -1222,6 +1222,13 @@ a metaclass class method.",
         if call.func.attrname != function.name:
             return
 
+        # Classes that override __eq__ should also override
+        # __hash__, even a trivial override is meaningful
+        if function.name == '__hash__':
+            for other_method in function.parent.mymethods():
+                if other_method.name == '__eq__':
+                    return
+
         # Should be a super call with the MRO pointer being the
         # current class and the type being the current instance.
         current_scope = function.parent.scope()
